# ros_ws

./: compile_commands.json
.cache/clangd/index/: add_two_ints_server.cpp.3BA190DE672D5925.idx  hardware_status.hpp.903E56F5BD1978B3.idx  hardware_status__builder.hpp.AC5D846E9E453ADF.idx  hardware_status__struct.hpp.0E547C608752234C.idx  hardware_status__traits.hpp.628F1C33DDA06B35.idx  hardware_status__type_support.hpp.7905F9D946D3A2D8.idx  number_counter.cpp.D319F993CB6A4993.idx  number_publisher.cpp.98E1A332FB399CC8.idx  phone.cpp.3A64BD5DFDEC2524.idx  rosidl_generator_cpp__visibility_control.hpp.0402CD8AB973F198.idx  station.cpp.7E35A653A836DC27.idx  talker.cpp.CFBEB8309BD42DFC.idx
install/: local_setup.sh  setup.sh
install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh  package.xml
install/my_py_pkg/share/my_py_pkg/: package.sh
install/my_robot_bringup/share/my_robot_bringup/: local_setup.sh  package.sh
install/my_robot_bringup/share/my_robot_bringup/config/: number_app.yaml
install/my_robot_bringup/share/my_robot_bringup/launch/: number_app.launch.xml
install/my_robot_interface/share/my_robot_interface/: local_setup.sh  package.dsv  package.ps1  package.sh
install/my_robot_interface/share/my_robot_interface/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  export_my_robot_interface__rosidl_generator_cExport-noconfig.cmake  export_my_robot_interface__rosidl_generator_cExport.cmake  export_my_robot_interface__rosidl_generator_cppExport.cmake  export_my_robot_interface__rosidl_generator_pyExport-noconfig.cmake  export_my_robot_interface__rosidl_generator_pyExport.cmake  export_my_robot_interface__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  my_robot_interfaceConfig.cmake  (+13 more)
log/: latest_build  latest_list
src/: .editorconfig  info.txt
src/.cache/clangd/index/: add_two_ints_client.cpp.ADC3B51CC62FDBF7.idx  add_two_ints_server.cpp.3BA190DE672D5925.idx  hardware_status_publisher.cpp.43B35F86D188511A.idx  number_counter.cpp.D319F993CB6A4993.idx  number_publisher.cpp.98E1A332FB399CC8.idx  phone.cpp.3A64BD5DFDEC2524.idx  station.cpp.7E35A653A836DC27.idx  talker.cpp.CFBEB8309BD42DFC.idx
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  hardware_status_publisher.cpp  number_counter.cpp  number_publisher.cpp  phone.cpp  station.cpp  talker.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: add_two_ints.py  my_first_node.py  robot_news_station.py  smartphone.py
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_interface/: CMakeLists.txt  package.xml
ymal_params/: number_params.yaml
(+39 files in other folders)
